src/test/ui/issues/issue-42944.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `Bx`
  --> $DIR/issue-42944.rs:9:9
   |
LL |         Bx(());
   |         ^^ constructor is not visible here due to private fields

error[E0425]: cannot find function, tuple struct or tuple variant `Bx` in this scope
  --> $DIR/issue-42944.rs:16:9
   |
LL |         Bx(());
   |         ^^ not found in this scope
   |
help: consider importing this tuple struct
   |
LL |     use foo::Bx;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0425.
For more information about an error, try `rustc --explain E0423`.
